# PlugMJ

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: json_to_folder.py
source/: ToCVXPY.wl  slurm.sh  start.sh
source/example/: Example1.nb  Example2.nb
source/example/Example3/: MakeJson.nb  Path_Ladder_type_SU2_Plot_withReflection.nb  Plot.nb  Task_LINE.json  allVars.wdx  lambda.wdx  loopequations.wdx  posimatrix1rename.wdx  posimatrix2rename.wdx
source/example/Example4/: Plot.nb  TRMT_Bootstrap.nb  Task.json
src/: main.py  output.csv  plugmj_shell.py
src/PlugMJ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/core/: data_saver.py  main.py  mosek_interface.py  task_loader.py
src/data/: data_saver.py  task_loader.py
src/interface/: cvxpy_interface.py  interface.py  mosek_interface.py
src/plugmj/: plugmj_shell.py
src/plugmj/data/: data_saver.py  folder_task_loader.py  mtx_reader.py  task_loader.py
src/plugmj/interface/: cvxpy_interface.py  interface.py  mosek_interface.py  picos_interface.py
src/utils/: log.py
